--- a/baothi.html
+++ b/baothi.html
@@ -1,1 +1,242 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gửi Bảo Thi</title>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
 
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Patrick Hand', cursive;
+      background-color: #fceef1;
+      overflow-x: hidden;
+      position: relative;
+    }
+
+    .popup {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    .popup-content {
+      background: url('https://i.pinimg.com/736x/61/f9/eb/61f9ebf9301458c911b452d6bf966feb.jpg') no-repeat center center;
+      background-size: cover;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      font-size: 20px;
+      max-width: 90%;
+      width: 400px;
+      border: 3px solid #ff7fa3;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      color: #eafff5;
+      backdrop-filter: brightness(1.1);
+    }
+
+    .popup.active {
+      display: flex;
+    }
+
+    .popup-content button {
+      margin-top: 20px;
+      font-size: 18px;
+      padding: 10px 20px;
+      background: #ff7fa3;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #letterWrapper {
+      display: none;
+      width: 100vw;
+      height: 100vh;
+      background-image: url('https://i.pinimg.com/736x/04/df/f6/04dff64a8a6ad328d1746c3ee107f8a6.jpg');
+      background-size: cover;
+      background-position: center;
+      padding: 60px;
+      box-sizing: border-box;
+      overflow-y: auto;
+    }
+
+    #letterContent {
+      background-color: rgba(255,255,255,0.7);
+      padding: 40px;
+      border-radius: 12px;
+      font-size: 22px;
+      line-height: 1.8;
+      color: black;
+    }
+
+    .falling-letter {
+      display: inline-block;
+      position: relative;
+      font-size: 20px;
+      color: #ff7fa3;
+      font-family: 'Patrick Hand', cursive;
+      opacity: 0;
+      animation: dropDisappear 2s ease forwards;
+    }
+
+    @keyframes dropDisappear {
+      0% { top: -100px; opacity: 0; }
+      90% { top: 0; opacity: 1; }
+      100% { top: 0; opacity: 0; }
+    }
+
+    #fallingName {
+      position: fixed;
+      top: 20px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 4px;
+      z-index: 2;
+    }
+
+    .petal {
+      position: fixed;
+      top: -50px;
+      width: 20px;
+      height: 20px;
+      background-image: url('https://cdn-icons-png.flaticon.com/512/7662/7662685.png');
+      background-size: cover;
+      opacity: 0.8;
+      animation: fall linear infinite;
+      pointer-events: none;
+      z-index: 1;
+    }@keyframes fall {
+      0% { transform: translateY(0) rotate(0deg); opacity: 0.8; }
+      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+    }
+
+    #loveMessage {
+      position: fixed;
+      top: 30%;
+      right: -100%;
+      font-size: 40px;
+      font-weight: bold;
+      color: #ff4d6d;
+      font-family: 'Gochi Hand', cursive;
+      z-index: 99999;
+      white-space: nowrap;
+      display: none;
+    }
+
+    @keyframes slideToCenter {
+      0% { right: -100%; }
+      100% { right: 50%; transform: translateX(50%); }
+    }
+
+    .fall-char {
+      display: inline-block;
+      animation: fallSand 1s forwards;
+    }
+
+    @keyframes fallSand {
+      to {
+        transform: translateY(200px);
+        opacity: 0;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div id="fallingName"></div>
+  <div id="loveMessage"></div>
+
+  <div id="welcomePopup" class="popup active">
+    <div class="popup-content">
+      <p>Xin chào đóa hoa xinh đẹp của anh 🌸<br><br> Nguyễn Lê Bảo Thi💗</p>
+      <button onclick="startLetter()">Bắt đầu</button>
+    </div>
+  </div>
+
+  <div id="letterWrapper">
+    <div id="letterContent">
+      <p><em>Gửi em yêu</em><br><br>
+        <em>Hôm nay nhân dịp 8/7 - ngày Tỏ tình Quốc tế,<br> Anh chỉ muốn nói rằng: "Anh yêu em nhiều lắm!"</em><br><br>
+        _______________________________<br><br>
+        <em>Anh xin hứa sẽ yêu em bằng tất cả những gì dịu dàng nhất trong anh</em><br><br> <em>Phan Khiem</em>
+      </p>
+      <button onclick="closeLetter()">Đóng thư</button>
+    </div>
+  </div>
+
+  <div id="finalPopup" class="popup">
+    <div class="popup-content">
+      <p>Lời chúc cuối cùng dành cho em 💖</p>
+      <p>Chúc em luôn rạng rỡ như ánh nắng, và mãi là đóa hoa xinh đẹp trong tim anh!<br>Phan Khiem</p>
+      <button onclick="showLoveMessage()">Kết thúc</button>
+    </div>
+  </div>
+
+  <script>
+    function startLetter() {
+      document.getElementById('welcomePopup').classList.remove('active');
+      document.getElementById('letterWrapper').style.display = 'block';
+    }
+
+    function closeLetter() {
+      document.getElementById('letterWrapper').style.display = 'none';
+      document.getElementById('finalPopup').classList.add('active');
+    }
+
+    function showLoveMessage() {
+      document.getElementById('finalPopup').classList.remove('active');
+      const msg = document.getElementById('loveMessage');
+      msg.style.display = 'block';
+      msg.textContent = 'ANH YÊU EM';
+      msg.style.animation = 'slideToCenter 2s forwards';
+
+      setTimeout(() => {
+        const text = msg.textContent;
+        msg.textContent = '';
+        [...text].forEach((ch, i) => {
+          const span = document.createElement('span');
+          span.textContent = ch;
+          span.className = 'fall-char';
+          span.style.animationDelay = `${i * 0.1}s`;
+          msg.appendChild(span);
+        });}, 5000); // sau khi chạy vào giữa và dừng lại 3s
+    }
+
+    const name = "Nguyễn Lê Bảo Thi";
+    const container = document.getElementById("fallingName");
+
+    function createFallingName() {
+      container.innerHTML = "";
+      name.split("").forEach((char, index) => {
+        const span = document.createElement("span");
+        span.textContent = char;
+        span.className = "falling-letter";
+        span.style.animationDelay = `${index * 0.1}s`;
+        container.appendChild(span);
+      });
+    }
+
+    createFallingName();
+    setInterval(createFallingName, 3000);
+
+    for (let i = 0; i < 40; i++) {
+      const petal = document.createElement("div");
+      petal.className = "petal";
+      petal.style.left = Math.random() * 100 + "vw";
+      petal.style.animationDuration = 5 + Math.random() * 5 + "s";
+      petal.style.animationDelay = Math.random() * 5 + "s";
+      document.body.appendChild(petal);
+    }
+  </script>
+</body>
+</html>
